Fix spacing on small screens

--- a/style.css
+++ b/style.css
@@ -931,6 +931,7 @@ img {
         flex-direction: column;
         text-align: center;
         gap: 0;
+        padding-top: 80px;
     }
 
     #products > .container > div {
